1.0.0 (26-Aug-2014):
* Fix OCaml 4.02 compatibility by not exposing a `Location` module
  in syntax extensions to avoid a namespace clash. We now rename them
  to `Xml_location` and `Css_location` and pack those instead.
* Fix BSD compatibility using `$(MAKE)` instead of `make` (since the
  GNU make binary is actually `gmake` on Free/Net/OpenBSD).
* Reduce the verbosity of the build by default.

0.10.1 (10-Aug-2014):
* Fix Xml.of_string "" invalid argument bug

0.10.0 (26-Apr-2014):
* Remove JSON parsing in favour of using `jsonm` instead.
* Stop testing OCaml 3.12.1 (although it may continue to work).

0.9.1 (20-Dec-2013):
* Fix parsing of empty attributes in XML/HTML/XHTML.

0.9.0 (20-Dec-2013):
* Remove all the Markdown variants except `Omd`, which now claims the `Cow.Markdown` module name.
* Clarify the repository license as ISC.
* Run some modules through `ocp-indent`.

0.8.1 (15-Dec-2013):
* Fix META file to include `omd`.
* Improve ocamldoc in CSS module and document quotations in README.
* Add `merlin` editor file.

0.8.0 (12-Dec-2013):
* Add Travis continuous integration scripts.
* Add `Omd_markdown` module based on the `omd` library.
* Note: The `Markdown` and `Markdown_github` modules are now deprecated and will be removed before 1.0.

0.7.0 (25-Sep-2013):
* Add an OPAM script that installs the right dependencies.
* Make native dynlink optional if not supported by the toolchain.
* Add support for `<xml:base>` in Atom feeds.

0.6.2 (30-Jul-2013):
* Fix code highlighting of integer literals with underscores.
* Fix XML parsing and printing for fragments and full documents.
* Fix handling of whitespaces in antiquotation attributes.

0.6.1 (03-Jul-2013):
* Tweak CSS syntax highlighting of OCaml code to fit Anil's superior colour taste.
* Add a `Code.ocaml_fragment` to get just the syntax highlighted bits without the wrapper tags.
* Expose a `decl` option to make the `Xml.to_string` declaration prefix optional.